force-app-metadata-removed/main/default/objects/Venue__c/fields/Days_Between_Today_and_Last_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Today_and_Last_Assessment__c</fullName>
    <label>Days Between Today and Last Assessment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>