force-app-metadata-removed/main/default/objects/Venue__c/fields/Geolocation_Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Error_Reason__c</fullName>
    <label>Geolocation Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>