force-app-metadata-removed/main/default/objects/Venue__c/fields/has_Geolocated__c.field-meta.xml
<CustomField>
    <fullName>has_Geolocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has Geolocated</label>
    <type>Checkbox</type>
</CustomField>