force-app-metadata-removed/main/default/objects/Venue__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <label>Map</label>
    <type>Url</type>
</CustomField>