force-app-metadata-removed/main/default/objects/Venue__c/fields/Parking_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Parking_Facilities__c</fullName>
    <label>Parking Facilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>