force-app-metadata-removed/main/default/objects/Venue__c/fields/TownCity__c.field-meta.xml
<CustomField>
    <fullName>TownCity__c</fullName>
    <label>Town/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>