force-app-metadata-removed/main/default/objects/Venue__c/fields/Venue_Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address_Formatted__c</fullName>
    <label>Venue Address - Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>