force-app-metadata-removed/main/default/objects/Venue__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>