force-app-metadata-removed/main/default/objects/Venue__c/fields/Waiting_Room__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Room__c</fullName>
    <label>Waiting Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>